--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -13,8 +13,8 @@
         "EXTRA_TEXT": []
     },
     "mojichimera:BelligerentMod": {
-        "TEXT": ["好战", "", "若敌人意图攻击，造成的伤害增加 #b50% 。"],
-        "EXTRA_TEXT": [" NL 若敌人意图攻击，造成的伤害增加 %d%% 。"]
+        "TEXT": ["好战", "", "若目标敌人意图攻击，造成的伤害增加 #b50% 。"],
+        "EXTRA_TEXT": [" NL 若目标敌人意图攻击，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:BiasedMod": {
         "TEXT": ["偏差", "", "卡牌数值增加 #b200% 。 NL 下 #b3 回合开始时，失去 #b33% 的效果。"],
@@ -28,9 +28,25 @@
         "TEXT": ["羁绊", "", "每有 #b3(2) 种 #y正面效果 ，魔法数字增加 #b1 （向上取整）。"],
         "EXTRA_TEXT": [" NL 每有 %d 种正面效果，特殊值增加 %d 。"]
     },
+    "mojichimera:CatalystMod": {
+        "TEXT": ["催化", "", "本牌耗能增加 #b1 。 NL 将所有敌人的 #y中毒 层数增加至 #b200% 。"],
+        "EXTRA_TEXT": [" NL 将所有敌人的 中毒 层数增加至 %d%% 。"]
+    },
     "mojichimera:ChargeMod": {
-        "TEXT": ["蓄力", "", "在手牌中每打出一张同类牌时，卡牌数值增加 #b50% 。 NL 打出后重置。"],
-        "EXTRA_TEXT": [" NL 在手牌中每打出一张同类牌时，数值增加 %d%% 。打出后重置。"]
+        "TEXT": ["蓄力", "", "在手牌中每打出一张同类牌时，卡牌数值增加 #b25% 。 NL 打出后重置。"],
+        "EXTRA_TEXT": [
+            " NL 在手牌中每打出一张%s牌时，数值增加 %d%% 。打出后重置。",
+            "攻击",
+            "技能"
+        ]
+    },
+    "mojichimera:CompileMod": {
+        "TEXT": ["编译", "", "你每有一种不同的 #y充能球 ，抽 #b1 张牌。"],
+        "EXTRA_TEXT": [
+            " NL 你每有一种不同的 充能球 ，抽 %d 张牌。",
+            " NL 你每有一种不同的 充能球 ，抽 %d 张牌。",
+            " NL 你每有一种不同的 充能球 ，抽 !M! 张牌。"
+        ]
     },
     "mojichimera:ConfrontingMod": {
         "TEXT": ["知难", "", "在首领与精英战中卡牌数值增加 #b100% 。"],
@@ -82,8 +98,8 @@
         "EXTRA_TEXT": [" NL 每第 %d 次手动打出本牌时，再打出 %d 次。"]
     },
     "mojichimera:OverlookingMod": {
-        "TEXT": ["俯视", "", "造成的伤害减少 #b33% 。 NL 敌人每有一种负面效果，抽 #b1 张牌。"],
-        "EXTRA_TEXT": [" NL 敌人每有一种负面效果，抽 %d 张牌。"]
+        "TEXT": ["俯视", "", "造成的伤害减少 #b33% 。 NL 目标敌人每有一种负面效果，抽 #b1 张牌。"],
+        "EXTRA_TEXT": [" NL 目标敌人每有一种负面效果，抽 %d 张牌。"]
     },
     "mojichimera:OverpoweredMod": {
         "TEXT": ["强力", "", "本牌耗能增加 #b1 。 NL #y虚无。 NL 卡牌数值增加 #b150% 。"],
@@ -106,7 +122,7 @@
         "EXTRA_TEXT": ["每当你进入 愤怒 时： NL "]
     },
     "mojichimera:ShareMod": {
-        "TEXT": ["共享", "", "造成的伤害和获得的 #y格挡 减少 #b50% 。 NL 打出时使其他手牌的造成的伤害和获得的 #y格挡 增加自身数值。 NL #y消耗 。"],
+        "TEXT": ["共享", "", "造成的伤害和获得的 #y格挡 减少 #b33% 。 NL 打出时使其他手牌的造成的伤害和获得的 #y格挡 增加自身数值。 NL #y消耗 。"],
         "EXTRA_TEXT": [" NL 使其他手牌的伤害和 格挡 增加自身数值。"]
     },
     "mojichimera:SkillizedMod": {
@@ -183,14 +199,6 @@
         "TEXT": ["混沌", "", "每场战斗开始时，卡牌数值在基础值的 #b50% （向上取整）与 #b200% 之间随机。"],
         "EXTRA_TEXT": []
     },
-    "mojichimera:CompileMod": {
-        "TEXT": ["编译", "", "你每有一种不同的 #y充能球 ，抽 #b1 张牌。"],
-        "EXTRA_TEXT": [
-            " NL 你每有一种不同的 充能球 ，抽 %d 张牌。",
-            " NL 你每有一种不同的 充能球 ，抽 %d 张牌。",
-            " NL 你每有一种不同的 充能球 ，抽 !M! 张牌。"
-        ]
-    },
     "mojichimera:ConcludeMod": {
         "TEXT": ["结末", "", "造成的伤害和获得的 #y格挡 增加 #b75% 。 NL 结束你的回合。"],
         "EXTRA_TEXT": [" NL 结束你的回合。"]
@@ -224,7 +232,7 @@
         "EXTRA_TEXT": [" NL 将 %d 张随机 状态牌 随机放入抽牌堆、弃牌堆或手牌。"]
     },
     "mojichimera:ExploitMod": {
-        "TEXT": ["", "利用", "敌人每有一层 #y易伤 ，造成的伤害增加 #b20% 。"],
+        "TEXT": ["利用", "", "敌人每有一层 #y易伤 ，造成的伤害增加 #b20% 。"],
         "EXTRA_TEXT": [" NL 敌人每有一层 易伤 ，造成的伤害增加 %d%% 。"]
     },
     "mojichimera:FireBreathingMod": {
@@ -244,7 +252,7 @@
         "EXTRA_TEXT": [" NL 获得 %d 点 临时 集中 。"]
     },
     "mojichimera:FuelFlameMod": {
-        "TEXT": ["浇油", "", "造成的伤害和获得的 #y格挡 减少 #b20% 。 NL 如果敌人有 #y易伤 状态，获得 [E] 并且抽 #b1 张牌。"],
+        "TEXT": ["浇油", "", "造成的伤害和获得的 #y格挡 减少 #b33% 。 NL 如果敌人有 #y易伤 状态，获得 [E] 并且抽 #b1 张牌。"],
         "EXTRA_TEXT": [
             " NL 如果敌人有 易伤 状态 ， NL 获得 [E] 并且抽 %d 张牌。",
             " NL 如果敌人有 易伤 状态 ， NL 获得 [E] [E] 并且抽 %d 张牌。",
@@ -292,7 +300,7 @@
         "EXTRA_TEXT": [" NL 自身生命百分比越低，获得的 格挡 越多 。"]
     },
     "mojichimera:PourSaltMod": {
-        "TEXT": ["撒盐", "", "造成的伤害和获得的 #y格挡 减少 #b20% 。 NL 如果敌人有 #y虚弱 状态，获得 [E] 并且抽 #b1 张牌。"],
+        "TEXT": ["撒盐", "", "造成的伤害和获得的 #y格挡 减少 #b33% 。 NL 如果敌人有 #y虚弱 状态，获得 [E] 并且抽 #b1 张牌。"],
         "EXTRA_TEXT": [
             " NL 如果敌人有 虚弱 状态 ， NL 获得 [E] 并且抽 %d 张牌。",
             " NL 如果敌人有 虚弱 状态 ， NL 获得 [E] [E] 并且抽 %d 张牌。",
@@ -326,6 +334,10 @@
     "mojichimera:SarcasticMod": {
         "TEXT": ["讽刺", "", "敌人每有一种负面效果，造成的伤害增加 #b20% 。"],
         "EXTRA_TEXT": [" NL 敌人每有一种负面效果，造成的伤害增加 %d%% 。"]
+    },
+    "mojichimera:SlowMod": {
+        "TEXT": ["缓慢", "", "本回合每打出过一张牌，造成的伤害增加 #b10% 。"],
+        "EXTRA_TEXT": [" NL 本回合每打出过一张牌，伤害增加 %d%% 。"]
     },
     "mojichimera:SteelMod": {
         "TEXT": ["钢铁", "", "抽到本牌时，本回合打出的下 #b1 张牌数值增加 #b50% 。 NL 该效果只会将数值至少 #b2 点的攻击、技能或能力牌作为目标。 NL 源于 #bBalatro 的 #y钢铁牌 。"],
@@ -498,9 +510,13 @@
         "TEXT": ["自学", "", "打出后在本场战斗中 #y升级。"],
         "EXTRA_TEXT": [" NL 在本场战斗中 升级。"]
     },
+    "mojichimera:ShackleMod": {
+        "TEXT": ["镣铐", "", "所有敌人失去 #b2(+1) 点力量 1 回合。"],
+        "EXTRA_TEXT": [" NL 所有敌人失去 %s 点力量 1 回合。"]
+    },
     "mojichimera:VigorMod": {
-        "TEXT": ["活力", "", "获得 #b4 层 #y活力 。"],
-        "EXTRA_TEXT": [" NL 获得 %d 层 活力 。"]
+        "TEXT": ["活力", "", "获得 #b3(+1) 层 #y活力 。"],
+        "EXTRA_TEXT": [" NL 获得 %s 层 活力 。"]
     },
     "mojichimera:WildMod": {
         "TEXT": ["狂野", "", "造成的伤害和获得的 #y格挡 增加 #b75% 。 NL 将 #b1 张 #y伤口 放入抽牌堆。"],
